<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/water_background_9"
    tools:context=".SignUp">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:background="@drawable/edit_box"
        app:layout_constraintTop_toBottomOf="@id/signUp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/signUp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/usernameEdt"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user"
        app:layout_constraintStart_toEndOf="@id/username"
        app:layout_constraintTop_toBottomOf="@id/signUp"
        app:layout_constraintBaseline_toBaselineOf="@id/username"
        android:layout_marginTop="5dp"
        android:layout_marginStart="45dp"
        tools:ignore="LabelFor"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/username"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/passwordEdt"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pass"
        app:layout_constraintStart_toStartOf="@id/usernameEdt"
        app:layout_constraintTop_toBottomOf="@id/usernameEdt"
        app:layout_constraintBaseline_toBaselineOf="@id/password"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmPassward"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/username"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/confirmPasswordEdt"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pass"
        app:layout_constraintStart_toEndOf="@id/confirmPassword"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintBaseline_toBaselineOf="@id/confirmPassword"
        android:importantForAutofill="no" />

    <View
        android:id="@+id/signUpBck"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_below="@id/background"
        android:background="@drawable/button"
        app:layout_constraintTop_toBottomOf="@id/background"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="18dp"/>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:background="@android:color/transparent"
        android:text="@string/signup"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/background"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/noMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_match"
        android:textSize="15sp"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/requirements"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword" />

    <!-- Requirements -->
    <TextView
        android:id="@+id/requirements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requirements"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/noMatch"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/requirement1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requirement1"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/requirements"
        app:layout_constraintStart_toStartOf="@id/requirements"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/requirement2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requirement2"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/requirement1"
        app:layout_constraintStart_toStartOf="@id/requirements"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/requirement3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requirement3"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/requirement2"
        app:layout_constraintStart_toStartOf="@id/requirements"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/requirement4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requirement4"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/requirement3"
        app:layout_constraintStart_toStartOf="@id/requirements"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/requirement5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requirement5"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/requirement4"
        app:layout_constraintStart_toStartOf="@id/requirements"
        android:layout_marginTop="10dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>